<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>GestionUtilisateurs</class>
 <widget class="QDialog" name="GestionUtilisateurs">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>461</width>
    <height>341</height>
   </rect>
  </property>
  <property name="minimumSize">
   <size>
    <width>461</width>
    <height>341</height>
   </size>
  </property>
  <property name="maximumSize">
   <size>
    <width>461</width>
    <height>341</height>
   </size>
  </property>
  <property name="windowTitle">
   <string>Gestionnaire de Mots de passe - Gestion des utilisateurs</string>
  </property>
  <widget class="QLabel" name="titrePage">
   <property name="geometry">
    <rect>
     <x>20</x>
     <y>10</y>
     <width>421</width>
     <height>21</height>
    </rect>
   </property>
   <property name="font">
    <font>
     <pointsize>12</pointsize>
     <weight>75</weight>
     <bold>true</bold>
    </font>
   </property>
   <property name="text">
    <string>Gestion des Utilisateurs</string>
   </property>
   <property name="alignment">
    <set>Qt::AlignCenter</set>
   </property>
  </widget>
  <widget class="QStackedWidget" name="stackedWidget">
   <property name="geometry">
    <rect>
     <x>10</x>
     <y>40</y>
     <width>441</width>
     <height>291</height>
    </rect>
   </property>
   <property name="currentIndex">
    <number>0</number>
   </property>
   <widget class="QWidget" name="page1">
    <widget class="QPushButton" name="supprimer">
     <property name="enabled">
      <bool>false</bool>
     </property>
     <property name="geometry">
      <rect>
       <x>290</x>
       <y>230</y>
       <width>141</width>
       <height>51</height>
      </rect>
     </property>
     <property name="text">
      <string>Supprimer l'utilisateur</string>
     </property>
    </widget>
    <widget class="QPushButton" name="creer">
     <property name="geometry">
      <rect>
       <x>290</x>
       <y>10</y>
       <width>141</width>
       <height>51</height>
      </rect>
     </property>
     <property name="text">
      <string>Créer un utilisateur</string>
     </property>
    </widget>
    <widget class="QListWidget" name="listeUtilisateurs">
     <property name="geometry">
      <rect>
       <x>10</x>
       <y>10</y>
       <width>261</width>
       <height>241</height>
      </rect>
     </property>
    </widget>
    <widget class="QPushButton" name="modifier">
     <property name="enabled">
      <bool>false</bool>
     </property>
     <property name="geometry">
      <rect>
       <x>290</x>
       <y>170</y>
       <width>141</width>
       <height>51</height>
      </rect>
     </property>
     <property name="text">
      <string>Modifier l'utilisateur</string>
     </property>
    </widget>
    <widget class="QLabel" name="titreSelection">
     <property name="geometry">
      <rect>
       <x>290</x>
       <y>80</y>
       <width>141</width>
       <height>21</height>
      </rect>
     </property>
     <property name="font">
      <font>
       <pointsize>11</pointsize>
       <weight>75</weight>
       <bold>true</bold>
       <underline>false</underline>
      </font>
     </property>
     <property name="text">
      <string>Sélection</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignCenter</set>
     </property>
    </widget>
    <widget class="QPushButton" name="gererGroupes">
     <property name="enabled">
      <bool>false</bool>
     </property>
     <property name="geometry">
      <rect>
       <x>290</x>
       <y>110</y>
       <width>141</width>
       <height>51</height>
      </rect>
     </property>
     <property name="text">
      <string>Gérer les groupes
de utilisateur</string>
     </property>
    </widget>
    <widget class="QPushButton" name="actualiser">
     <property name="geometry">
      <rect>
       <x>10</x>
       <y>260</y>
       <width>81</width>
       <height>23</height>
      </rect>
     </property>
     <property name="text">
      <string>Actualiser</string>
     </property>
    </widget>
   </widget>
   <widget class="QWidget" name="page2">
    <widget class="QLabel" name="titreCreerModifier">
     <property name="geometry">
      <rect>
       <x>10</x>
       <y>10</y>
       <width>221</width>
       <height>21</height>
      </rect>
     </property>
     <property name="font">
      <font>
       <pointsize>11</pointsize>
       <weight>75</weight>
       <bold>true</bold>
      </font>
     </property>
     <property name="text">
      <string>Créer|Modifier un utilisateur</string>
     </property>
    </widget>
    <widget class="QLineEdit" name="nom">
     <property name="geometry">
      <rect>
       <x>130</x>
       <y>60</y>
       <width>113</width>
       <height>20</height>
      </rect>
     </property>
    </widget>
    <widget class="QLineEdit" name="identifiant">
     <property name="geometry">
      <rect>
       <x>130</x>
       <y>90</y>
       <width>113</width>
       <height>20</height>
      </rect>
     </property>
    </widget>
    <widget class="QLineEdit" name="motdepasse">
     <property name="geometry">
      <rect>
       <x>130</x>
       <y>120</y>
       <width>113</width>
       <height>20</height>
      </rect>
     </property>
     <property name="echoMode">
      <enum>QLineEdit::Password</enum>
     </property>
    </widget>
    <widget class="QCheckBox" name="administrateur">
     <property name="geometry">
      <rect>
       <x>130</x>
       <y>150</y>
       <width>91</width>
       <height>17</height>
      </rect>
     </property>
     <property name="text">
      <string>Administrateur</string>
     </property>
    </widget>
    <widget class="QLabel" name="labelNom">
     <property name="geometry">
      <rect>
       <x>30</x>
       <y>60</y>
       <width>71</width>
       <height>16</height>
      </rect>
     </property>
     <property name="text">
      <string>Nom complet :</string>
     </property>
    </widget>
    <widget class="QLabel" name="labelIdentifiant">
     <property name="geometry">
      <rect>
       <x>30</x>
       <y>90</y>
       <width>61</width>
       <height>16</height>
      </rect>
     </property>
     <property name="text">
      <string>Identifiant :</string>
     </property>
    </widget>
    <widget class="QLabel" name="labelMotDePasse">
     <property name="geometry">
      <rect>
       <x>30</x>
       <y>120</y>
       <width>71</width>
       <height>16</height>
      </rect>
     </property>
     <property name="text">
      <string>Mot de passe :</string>
     </property>
    </widget>
    <widget class="QPushButton" name="validerUtilisateur">
     <property name="geometry">
      <rect>
       <x>310</x>
       <y>60</y>
       <width>75</width>
       <height>23</height>
      </rect>
     </property>
     <property name="text">
      <string>Valider</string>
     </property>
    </widget>
    <widget class="QPushButton" name="annulerUtilisateur">
     <property name="geometry">
      <rect>
       <x>310</x>
       <y>90</y>
       <width>75</width>
       <height>23</height>
      </rect>
     </property>
     <property name="text">
      <string>Annuler</string>
     </property>
    </widget>
   </widget>
   <widget class="QWidget" name="page3">
    <widget class="QLabel" name="titreGererGroupes">
     <property name="geometry">
      <rect>
       <x>10</x>
       <y>10</y>
       <width>141</width>
       <height>21</height>
      </rect>
     </property>
     <property name="font">
      <font>
       <pointsize>11</pointsize>
       <weight>75</weight>
       <bold>true</bold>
      </font>
     </property>
     <property name="text">
      <string>Gérer les groupes</string>
     </property>
    </widget>
    <widget class="QListWidget" name="groupes">
     <property name="geometry">
      <rect>
       <x>10</x>
       <y>70</y>
       <width>181</width>
       <height>211</height>
      </rect>
     </property>
    </widget>
    <widget class="QListWidget" name="groupesUtilisateur">
     <property name="geometry">
      <rect>
       <x>250</x>
       <y>70</y>
       <width>181</width>
       <height>181</height>
      </rect>
     </property>
    </widget>
    <widget class="QLabel" name="labelGroupes">
     <property name="geometry">
      <rect>
       <x>10</x>
       <y>50</y>
       <width>91</width>
       <height>16</height>
      </rect>
     </property>
     <property name="text">
      <string>Liste des groupes</string>
     </property>
    </widget>
    <widget class="QLabel" name="labelGroupesUtilisateur">
     <property name="geometry">
      <rect>
       <x>250</x>
       <y>50</y>
       <width>111</width>
       <height>16</height>
      </rect>
     </property>
     <property name="text">
      <string>Groupes de l'utilisateur</string>
     </property>
    </widget>
    <widget class="QPushButton" name="ajouterGroupe">
     <property name="geometry">
      <rect>
       <x>200</x>
       <y>140</y>
       <width>41</width>
       <height>23</height>
      </rect>
     </property>
     <property name="text">
      <string>&gt;</string>
     </property>
    </widget>
    <widget class="QPushButton" name="enleverGroupe">
     <property name="geometry">
      <rect>
       <x>200</x>
       <y>180</y>
       <width>41</width>
       <height>23</height>
      </rect>
     </property>
     <property name="text">
      <string>&lt;</string>
     </property>
    </widget>
    <widget class="QPushButton" name="validerGroupes">
     <property name="geometry">
      <rect>
       <x>250</x>
       <y>260</y>
       <width>86</width>
       <height>23</height>
      </rect>
     </property>
     <property name="text">
      <string>Valider</string>
     </property>
    </widget>
    <widget class="QPushButton" name="annulerGroupes">
     <property name="geometry">
      <rect>
       <x>345</x>
       <y>260</y>
       <width>86</width>
       <height>23</height>
      </rect>
     </property>
     <property name="text">
      <string>Annuler</string>
     </property>
    </widget>
    <widget class="QLabel" name="labelUtilisateur">
     <property name="geometry">
      <rect>
       <x>250</x>
       <y>10</y>
       <width>181</width>
       <height>21</height>
      </rect>
     </property>
     <property name="font">
      <font>
       <pointsize>10</pointsize>
       <weight>50</weight>
       <bold>false</bold>
      </font>
     </property>
     <property name="text">
      <string>Utilisateur</string>
     </property>
    </widget>
   </widget>
  </widget>
 </widget>
 <tabstops>
  <tabstop>creer</tabstop>
  <tabstop>listeUtilisateurs</tabstop>
  <tabstop>actualiser</tabstop>
  <tabstop>gererGroupes</tabstop>
  <tabstop>modifier</tabstop>
  <tabstop>supprimer</tabstop>
  <tabstop>nom</tabstop>
  <tabstop>identifiant</tabstop>
  <tabstop>motdepasse</tabstop>
  <tabstop>administrateur</tabstop>
  <tabstop>validerUtilisateur</tabstop>
  <tabstop>annulerUtilisateur</tabstop>
  <tabstop>groupes</tabstop>
  <tabstop>ajouterGroupe</tabstop>
  <tabstop>enleverGroupe</tabstop>
  <tabstop>groupesUtilisateur</tabstop>
  <tabstop>validerGroupes</tabstop>
  <tabstop>annulerGroupes</tabstop>
 </tabstops>
 <resources/>
 <connections/>
</ui>
